=== 0.3.39 2013-11-12

* Added contact transcribe_allowed api call.
* Removed admin_user_id from MemberCall.list arguments.
* Removing field average_changed from company.

=== 0.3.38 2013-10-28

* Added insufficient_handwritten_credits endpoint to the contact proxy model.
* Added handwritten_review_credit proxy model.
* Added Company list method.
* Removed unnecessary CGI escape of message.
* Removed CompanyUser attributes.
* Adding company id parameter for Contact update call.
* Adding company id parameter for CustomerCall, EmailInvitation and Contact create calls.
* Removed the syndicate attribute from the Company proxy model.
* Added free_trials proxy model
* Added handwritten_reviews proxy model
* Altered ChallengeCommunication to use Lobbyist ReviewChallenge reference.
* Added metrics proxy model
* Adding company id parameter for Contact update call.
* Adding company id parameter for CustomerCall, EmailInvitation and Contact create calls.
* Removed the syndicate attribute from the Company proxy model.

=== 0.3.37 2013-10-03

* Fixed unauthorized exception creation edge case when no message is sent from the server.
* Reverted models that were sending empty hashes back to their previous form.
* Removed unneeded attr_accessor calls from termination_notice and member_call proxy models.
* Added sales_team model
* Added admin_user model
* Added admin_performance_event proxy model and tests.
* Added enterprise model.
* Added enterprise_settings model.
* Added default functionality to match API's default responses to Lobbyist::Base.
* Passing empty hash for termination_notice put request

=== 0.3.36 2013-09-17

* Fixed reset_password parameters for the company_user proxy model.
* Added terminate method to the company proxy model.
* Added reset_password call to company user proxy model.
* Added new gem file 'faraday_middleware' for multi-part posts and logic for multi-part post

=== 0.3.35 2013-09-04

* Added the reset_password call to the CompanyUser proxy model.