@@ -1,3 +1,6 @@
+* Slowly adding back attr_accessor calls. Review confimation accessors added here.
+* Added the review confirmation child attribute to the review proxy model.
+
 === 0.3.39 2013-11-12
 
 * Added contact transcribe_allowed api call.
